--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:        pretty
 title:            Ritesh
 tagline:          'Existence'
 description:      'StrangeLand'
-url:              riteshx95.github.io
+url:              https://riteshx95.github.io
 baseurl:          /
 
 author:
