--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:        pretty
 # relative_permalinks: true
 
 # Setup
-title:            Ritesh
+title:            
 tagline:          'Existence'
-description:      'StrangeLand'
+description:      'Ritesh'
 url:              https://riteshx95.github.io
 baseurl:          /
 
