--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            
 tagline:          ''
-description:      ''
+description:      'Ritesh'
 url:              https://riteshx95.github.io
 baseurl:          /
 
