--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 # relative_permalinks: true
 
 # Setup
-title:            ''
+title:            'Ritesh Ghanta'
 tagline:          ''
 description:      'Ritesh'
 url:              https://riteshx95.github.io
