--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ title:            ''
 tagline:          ''
 description:      'Ritesh'
 url:              https://riteshx95.github.io
-baseurl:          /
-root:             /
+baseurl:          https://riteshx95.github.io/
 
 author:
   name:           ''
