--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl:          https://riteshx95.github.io/
 
 author:           'Ritesh Ghanta'
   name:           ''
-  url:            'https://riteshx95.github.io'
+  url:            ''
 
 
 paginate:         5
