--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ permalink:        pretty
 # relative_permalinks: true
 
 # Setup
-title:            'Ritesh Ghantai'
+title:            ''
 tagline:          ''
 description:      'Ritesh'
 url:              https://riteshx95.github.io
 baseurl:          https://riteshx95.github.io/
 #baseurl:          /
 
-author:           'Ritesh Ghanta'
+author:           ''
   name:           ''
   url:            ''
 
