--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url:              https://riteshx95.github.io
 baseurl:          https://riteshx95.github.io/
 #baseurl:          /
 
-author:           'Ritesh Ghanta'
+author:           
   name:           ''
   url:
 
