--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl:          https://riteshx95.github.io/
 #baseurl:          /
 
 author:          riteshx95
-  name:           'Ritesh'
+  name:           Ritesh Ghanta
   url:
 
 paginate:         5
