--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            'Ritesh Ghanta'
 tagline:          ''
-description:      'Ritesh'
+description:      ''
 url:              https://riteshx95.github.io
 baseurl:          https://riteshx95.github.io/
 #baseurl:          /
